Oprettet ved hjælp af Colaboratory

--- a/ASMT_kinetics_shengxiao_data.ipynb
+++ b/ASMT_kinetics_shengxiao_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNo3xCkGIkH2kEro1qXNW6Y",
+      "authorship_tag": "ABX9TyPuTUxpD4sjvgrooavTO2n7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2842,9 +2842,7 @@
         "\n",
         "![picture](https://drive.google.com/uc?id=1WuEcGPH00CQM7L2Eivc4Oed3s5TIFjEj)\n",
         "\n",
-        "derivation of ordered rate with an unproductive dead-end EB complex just to show a bit of the math (fig. 2):\n",
         "\n",
-        "![picture](https://drive.google.com/uc?id=17ol3dqQzYPHUbCTLTTqDjkUiUk8U6pwT)\n",
         "\n",
         "\n",
         "For the random mechanism (fig. 3) :\n",
@@ -3433,6 +3431,11 @@
         "A random sequential model (BiBi_random_AB_inhibition_4) where SAM (molecule A) most often binds first to form EA complex followed by bindins of NAS (molecule B) in unproductive mode and one more NAS in productive mode gives physically realistic kinetic parameters and explains Sherngxiao's data reasonably well.\n",
         "\n",
         "![picture](https://drive.google.com/uc?id=1yipj1uTNEaCh-1G1i0FlfDRvrdmGMipO)\n",
+        "\n",
+        "\n",
+        "![picture](https://drive.google.com/uc?id=1LrObrQXpGEE88pyhaZbMEa98J9jRrtEp)\n",
+        "\n",
+        "Rate lav derivation:\n",
         "\n"
       ],
       "metadata": {
