Oprettet ved hjælp af Colaboratory

--- a/ASMT_kinetics_shengxiao_data.ipynb
+++ b/ASMT_kinetics_shengxiao_data.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuTUxpD4sjvgrooavTO2n7",
+      "authorship_tag": "ABX9TyMkkdehnDEnjrz7uUptJ+oy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3242,7 +3242,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is the only model that converges with scipy. Ir implies the formation of an unproducrive EAB' complex along with the productive EAB complex  "
+        "This is the only model that converges with scipy. Ir implies the formation of an unproducrive EAB' complex along with the productive EAB complex. It is, however, evident that inhibition depends on both substrate concentrations."
       ],
       "metadata": {
         "id": "waJ04CBkOYCt"
@@ -3529,7 +3529,7 @@
       "cell_type": "markdown",
       "source": [
         "Conclusions:\n",
-        "1. As EB is always low the reaction can essentially be describes as a sequential ordered reaction with SAM binding first.\n",
+        "1. As EB is always low for low substrate concentrations, the reaction can here essentially be describes as a sequential ordered reaction with SAM binding first.\n",
         "2. At the lowest substrate concentrations the prominent species are E, EA and EAB. So in terms of which binding pocket to target, all 3 are possible.\n",
         "3. At high SAM and NAS concentrations EAB2 becomes dominant. However in terms of cellular concentrations these is probably highly unrealistic.\n",
         "4. kcat is very similar with that from Lotta et al COMT work. They use COMT concentrations around 30 nM and get Vmax of 37 nM/min giving a kcat around 1 min-1 as we do."
